--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "express": "^4.13.3",
+    "json-loader": "^0.5.4",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.9.1"
