--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "uppy-utils": "git+https://github.com/transloadit/uppy-utils.git"
   },
   "devDependencies": {
+    "babel-cli": "6.11.4",
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-cli": "6.11.4"
+    "chokidar": "^1.6.0"
   },
   "scripts": {
-    "build:lib": "babel src -d lib",
+    "build": "babel src -d lib",
+    "build:sourcemaps": "babel src --source-maps -d lib",
+    "start": "chokidar './src/**/*.js' -c 'npm run build:sourcemaps'",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
